--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  border: 2px solid orange;
+  width: fit-content;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* align-items: center; */
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  align-self: center;
+  color: whitesmoke;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+label {
+  color: whitesmoke;
+}
+
+form {
+  border: 2px solid greenyellow;
+  display: flex;
+  flex-direction: column;
+}
+
+button {
+  align-self: center;
+}
+
+ul {
+  border: 2px solid plum;
+  list-style-type: none;
+  margin-block: 0;
+  padding-inline: 0;
+  color: whitesmoke;
+}
+
+.read {
+  cursor: pointer;
+}
+
+.read:hover {
+  background: orange;
 }
